@@ -35,9 +35,9 @@ import java.util.TreeSet;
  * A JDBC driver which is a facade that delegates to one or more real underlying
  * JDBC drivers.  The driver will spy on any other JDBC driver that is loaded,
  * simply by prepending <code>jdbc:log4</code> to the normal jdbc driver URL
- * used by any other JDBC driver. The driver, by default, also loads several 
- * well known drivers at class load time, so that this driver can be 
- * "dropped in" to any Java program that uses these drivers without making any 
+ * used by any other JDBC driver. The driver, by default, also loads several
+ * well known drivers at class load time, so that this driver can be
+ * "dropped in" to any Java program that uses these drivers without making any
  * code changes.
  * <p/>
  * The well known driver classes that are loaded are:
@@ -197,7 +197,7 @@ public class DriverSpy implements Driver
    * under some circumstances.
    */
   static boolean DumpFullDebugStackTrace;
-  
+
   /**
    * Attempt to Automatically load a set of popular JDBC drivers?
    */
@@ -253,21 +253,21 @@ public class DriverSpy implements Driver
   /**
    * Get a Long option from a property and
    * log a debug message about this.
-   * 
+   *
    * @param props Properties to get option from.
    * @param propName property key.
    *
    * @return the value of that property key, converted
    * to a Long.  Or null if not defined or is invalid.
    */
-  private static Long getLongOption(Properties props, String propName, 
+  private static Long getLongOption(Properties props, String propName,
     long defaultValue)
   {
     String propValue = props.getProperty(propName);
     Long longPropValue;
     if (propValue == null)
     {
-      log.debug("x " + propName + " is not defined (using default of " + 
+      log.debug("x " + propName + " is not defined (using default of " +
         defaultValue +")");
       longPropValue = new Long(defaultValue);
     }
@@ -314,7 +314,7 @@ public class DriverSpy implements Driver
   /**
    * Get a boolean option from a property and
    * log a debug message about this.
-   * 
+   *
    * @param props Properties to get option from.
    * @param propName property name to get.
    * @param defaultValue default value to use if undefined.
@@ -354,9 +354,9 @@ public class DriverSpy implements Driver
   {
     log.debug("... log4jdbc initializing ...");
 
-    InputStream propStream = 
+    InputStream propStream =
       DriverSpy.class.getResourceAsStream("/log4jdbc.properties");
-    
+
     Properties props = new Properties(System.getProperties());
     if (propStream != null)
     {
@@ -377,7 +377,7 @@ public class DriverSpy implements Driver
         }
         catch (IOException e)
         {
-          log.debug("ERROR!  io exception closing property file stream: " + 
+          log.debug("ERROR!  io exception closing property file stream: " +
             e.getMessage());
 				}
       }
@@ -409,7 +409,7 @@ public class DriverSpy implements Driver
     DumpBooleanAsTrueFalse =
       getBooleanOption(props, "log4jdbc.dump.booleanastruefalse",false);
 
-    DumpSqlMaxLineLength = getLongOption(props, 
+    DumpSqlMaxLineLength = getLongOption(props,
       "log4jdbc.dump.sql.maxlinelength", 90L).intValue();
 
     DumpFullDebugStackTrace =
@@ -435,8 +435,8 @@ public class DriverSpy implements Driver
 
     TrimSql = getBooleanOption(props, "log4jdbc.trim.sql", true);
 
-    SuppressGetGeneratedKeysException = 
-    	getBooleanOption(props, "log4jdbc.suppress.generated.keys.exception", 
+    SuppressGetGeneratedKeysException =
+    	getBooleanOption(props, "log4jdbc.suppress.generated.keys.exception",
     	false);
 
     // The Set of drivers that the log4jdbc driver will preload at instantiation
@@ -448,6 +448,7 @@ public class DriverSpy implements Driver
     if (AutoLoadPopularDrivers)
     {
       subDrivers.add("oracle.jdbc.driver.OracleDriver");
+      subDrivers.add("oracle.jdbc.OracleDriver");
       subDrivers.add("com.sybase.jdbc2.jdbc.SybDriver");
       subDrivers.add("net.sourceforge.jtds.jdbc.Driver");
 
@@ -517,11 +518,12 @@ public class DriverSpy implements Driver
     }
 
     SqlServerRdbmsSpecifics sqlServer = new SqlServerRdbmsSpecifics();
+    OracleRdbmsSpecifics oracle = new OracleRdbmsSpecifics();
 
     /** create lookup Map for specific rdbms formatters */
     rdbmsSpecifics = new HashMap();
-    rdbmsSpecifics.put("oracle.jdbc.driver.OracleDriver",
-      new OracleRdbmsSpecifics());
+    rdbmsSpecifics.put("oracle.jdbc.driver.OracleDriver", oracle);
+    rdbmsSpecifics.put("oracle.jdbc.OracleDriver", oracle);
     rdbmsSpecifics.put("net.sourceforge.jtds.jdbc.Driver", sqlServer);
     rdbmsSpecifics.put("com.microsoft.jdbc.sqlserver.SQLServerDriver",
       sqlServer);
